Finish UI with correct styling and layout

--- a/index.html
+++ b/index.html
@@ -9,34 +9,32 @@
 </head>
 <body>
     <div id="calc-container">
-        <div id="display"></div>
+        <div id="display">
+            <p id="math">5 + 5 =</p>
+            <p id="total">10</p>
+        </div>
         <div id="rec-btns-container">
             <button class="rec-btns" id="clr-btn">Clear</button>
-            <button class="rec-btns" id="Undo">Undo</button>
+            <button class="rec-btns" id="undo-btn">Undo</button>
         </div>
-        <div class="sq-btns-containers">
+        <div id="sq-btns-container">
             <button class="num-btns sq-btns">7</button>
             <button class="num-btns sq-btns">8</button>
             <button class="num-btns sq-btns">9</button>
             <button class="op-btns sq-btns">&#247</button>
-        </div>
-        <div class="sq-btns-containers">
             <button class="num-btns sq-btns">4</button>
             <button class="num-btns sq-btns">5</button>
             <button class="num-btns sq-btns">6</button>
             <button class="op-btns sq-btns">X</button>
-        </div>
-        <div class="sq-btns-containers">
             <button class="num-btns sq-btns">1</button>
             <button class="num-btns sq-btns">2</button>
             <button class="num-btns sq-btns">3</button>
             <button class="op-btns sq-btns">-</button>
-        </div>
-        <div class="sq-btns-containers">
             <button class="num-btns sq-btns">0</button>
             <button class="num-btns sq-btns">.</button>
             <button id="eq-btn" class="sq-btns">=</button>
             <button class="op-btns sq-btns">+</button>
+        </div>
         </div>
     </div>
 </body>
