--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="calc-container">
         <div id="display">
-            <p id="math">5 + 5 =</p>
-            <p id="total">10</p>
+            <p id="calculation"></p>
+            <p id="result"></p>
         </div>
         <div id="rec-btns-container">
             <button class="rec-btns" id="clr-btn">Clear</button>
@@ -25,16 +25,15 @@
             <button class="num-btns sq-btns">4</button>
             <button class="num-btns sq-btns">5</button>
             <button class="num-btns sq-btns">6</button>
-            <button class="op-btns sq-btns">X</button>
+            <button class="op-btns sq-btns">x</button>
             <button class="num-btns sq-btns">1</button>
             <button class="num-btns sq-btns">2</button>
             <button class="num-btns sq-btns">3</button>
             <button class="op-btns sq-btns">-</button>
             <button class="num-btns sq-btns">0</button>
-            <button class="num-btns sq-btns">.</button>
+            <button id="dec-btn" class="sq-btns">.</button>
             <button id="eq-btn" class="sq-btns">=</button>
             <button class="op-btns sq-btns">+</button>
-        </div>
         </div>
     </div>
 </body>
