--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="num-btns sq-btns">7</button>
             <button class="num-btns sq-btns">8</button>
             <button class="num-btns sq-btns">9</button>
-            <button class="op-btns sq-btns">&#247</button>
+            <button class="op-btns sq-btns">/</button>
             <button class="num-btns sq-btns">4</button>
             <button class="num-btns sq-btns">5</button>
             <button class="num-btns sq-btns">6</button>
